- Fixed a layout problem in the content centre which occured when the option for creating   new content from listing of content sections was active (default is false). - Added translation for the name of content type ccm-ldn-types-organization
git-svn-id: https://svn.libreccm.org/ccm/trunk@3119 8810af33-2d31-482b-a856-94f89814c4df

--- a/ccm-core/web/themes/foundry/foundry/styles/admin.css
+++ b/ccm-core/web/themes/foundry/foundry/styles/admin.css
@@ -1761,3 +1761,11 @@ span#quickLinksCascade {
     display: block;
 }
 
+.static-new-item-form select {
+    max-width: 12em;
+    
+}
+
+.static-new-item-form input {
+    height: 1.8em;
+}
